--- a/cop4710project/templates/base.html
+++ b/cop4710project/templates/base.html
@@ -22,6 +22,7 @@
          <a class="nav-item nav-link" href="{{ url_for('del_game') }}">Delete Games</a>
         <a class="nav-item nav-link" href="{{ url_for('list_ratings') }}">Personal Ratings</a>
       <a class="nav-item nav-link" href="{{ url_for('add_rating') }}">Add Rating</a>
+      <a class="nav-item nav-link" href="{{ url_for('display_aggregate') }}">Aggregate Functions</a>
 
 
     </div>
